# metalloprotein-intrinsic-disorder-predictor

./: .gitignore  midp-environment.yml  pyproject.toml
.cursor/docs/: file_structure.md  important_functions.md  project_architecture.md
.cursor/rules/: midp-development.mdc
scripts/: test_evolutionary_analysis.py  test_loader.py
src/midp/cloud/: lambda_function_interpretable.py
src/midp/core/: constants.py  data_structures.py  exceptions.py  interfaces.py
src/midp/data/: loaders.py
src/midp/interpretable/evolutionary/: __init__.py  coevolution.py  config.py  conservation.py  evolutionary.yaml  evolutionary_features.py  msa_processor.py
tests/: conftest.py
tests/interpretable/: test_evolutionary.py
